<resources>
    <string name="app_name">Rosario Rescue</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE ANIMALS</string>
    <string name="backdrop_subtitle">Helping each other is the key</string>

    <string name="category_cats">Cats</string>
    <string name="category_dogs">Dogs</string>
    <string name="category_others">Others</string>
    <string name="animal_description"> Write a description here</string>
    <string name="share_photo">Share Photo</string>
    <string name="type_cat">Cat</string>
    <string name="type_dog">Dog</string>
    <string name="type_other">Other</string>
    <string name="status_found">Found</string>
    <string name="status_wanted">Wanted</string>
    <string name="status_all">All</string>
    <string name="title_select_type">Select Type</string>
    <string name="button_add_animal">Add</string>
    <string name="status">Status</string>
    <string name="select_photos">Select Photos</string>
    <string name="no_photo_selected">No photo selected</string>
    <string name="upload_success">Upload Success</string>
    <string name="generic_error">Something went wrong</string>
    <string name="need_photo_select">You need to select at least one photo </string>
    <string name="done">Done!!</string>
    <string name="uploading">uploading</string>
    <string name="uploading_finish">done</string>


    <string name="facebook_app_id">451731489031892</string>
    <string name="fb_login_protocol_scheme">fb451731489031892</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="my_preference">com.rosariorescue.MyPref</string>
    <string name="my_preference_key">com.rosariorescue.MyPrefKey</string>

</resources>
